<resources>
    <string name="app_name">Running</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Drawable Vectors -->
    <string name="ic_account">Account</string>
    <string name="ic_background">Background</string>
    <string name="ic_location_on">Location On</string>
    <string name="ic_bluetooth">Bluetooth</string>
    <string name="ic_refresh">Refresh</string>
    <string name="ic_chevron_right">Chevron Right</string>
    <string name="ic_play_arrow">Play Arrow</string>

    <string name="title_dialog_activity_splash_screen">Running</string>
    <string name="content_dialog_activity_splash_screen">Es necesario aceptar los permisos para poder utilizar correctamente la aplicación</string>
    <string name="positive_text_dialog_activity_splash_screen">Continuar</string>

    <!-- Main Activity -->
    <string name="account_name_main_activity">Alba Almaraz</string>
    <string name="account_location_main_activity">Mexico City</string>

    <string name="text_device_paired_activity_select_device">Dispositivos Emparejados</string>

    <string name="text_device_activity_select_device">Dispositivos Disponibles</string>

    <!-- Device Item Recycler View -->
    <string name="device_name_recycler_view">SC-AKX100</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
