<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="mx.jccg.running.activities.SelectDeviceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CommonTextView"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryTextAccent"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/text_device_paired_activity_select_device"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/device_paired_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CommonTextView"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryTextAccent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/text_device_activity_select_device"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/device_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        app:layout_anchor="@id/bottom_linear_layout"
        app:layout_anchorGravity="bottom|center"
        android:id="@+id/search_device_floating_action_button"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:contentDescription="@string/ic_refresh"
        android:background="@color/colorAccent"
        app:srcCompat="@drawable/ic_refresh"/>

</android.support.design.widget.CoordinatorLayout>
