<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="mx.jccg.running.activities.MainActivity">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/ic_background"
                        android:background="@drawable/ic_background"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:contentDescription="@string/ic_account"
                                app:srcCompat="@drawable/account"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="5dp"
                                android:theme="@style/CommonTextView"
                                android:text="@string/account_name_main_activity"
                                android:textSize="18sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="16sp"
                                    android:layout_height="16sp"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/ic_location_on"
                                    android:contentDescription="@string/ic_location_on" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:layout_marginLeft="5dp"
                                    android:textSize="12sp"
                                    android:theme="@style/CommonTextView"
                                    android:text="@string/account_location_main_activity"/>

                            </LinearLayout>

                        </LinearLayout>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="20dp"
                            card_view:cardBackgroundColor="@color/colorPrimaryLight">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal"
                                    android:weightSum="2">

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:orientation="vertical"
                                        android:padding="5dp">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:theme="@style/CommonPrimaryDarkTextView"
                                            android:text="16.01"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="Distancia: KM"
                                            android:textStyle="bold"
                                            android:textColor="@color/colorAccent" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:theme="@style/CommonPrimaryDarkTextView"
                                            android:text="01:03:19" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="Tiempo"
                                            android:textColor="@color/colorAccent"
                                            android:textStyle="bold" />

                                    </LinearLayout>

                                </LinearLayout>

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                </RelativeLayout>


            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
